--- a/my_css1.css
+++ b/my_css1.css
@@ -15,14 +15,15 @@ body{
     background: url(IMG/field_12.jpg) no-repeat top center fixed;
     /* background-repeat: no-repeat; */
     background-size: cover;
+    align-items: center;
 }
 
 .container{    
     display: flex;
     flex-direction: column;
-    margin: auto;
-    /* border: 1px dotted blue;
-    margin: 5px; */
+  
+    border: 1px dotted blue;
+    margin: 5px auto;
     height: 100vh;
     max-width: 1240px;
 }
@@ -48,7 +49,6 @@ a{
     opacity: 0.6;
 }
 h2{
-    width:80vw;
     color: rgb(227, 238, 75);    
     font-size: 85px;
     line-height: 1.4em;
