--- a/my_css1.css
+++ b/my_css1.css
@@ -123,7 +123,7 @@ transform: scale(1, 0.3);
     }
     h2{
         font-size: 45px;
-        width: 50vw;
+        text-align: center;
     }
 
 }
