--- a/my_css1.css
+++ b/my_css1.css
@@ -106,6 +106,7 @@ transform: scale(1, 0.3);
     }
     .rodina{
         color:red;
+        font-size: 45px;
     }
     }
 @media only screen and (max-width: 816px) {
