--- a/actions.css
+++ b/actions.css
@@ -13,6 +13,9 @@
     width: 20%;
     background-color: #1A4e11;
 }
+.bottom_menu{
+    display: none;    
+}
 .text_menu{
     /* border: 1px dotted red; */
     margin: 20%;
@@ -74,7 +77,6 @@ a:active{
 }
 
 .content{
-    height: 1200px;
     width: 80%;
     background-color: #A2F66F;
 }
@@ -139,4 +141,73 @@ a:active{
 }
 #kasatki:hover{
     max-width: 150%;
+}
+@media screen and (max-width: 725px){
+    .page_news{
+        display:flex;
+        flex-direction: column;
+    }
+    .menu{
+        position: sticky;
+        top: calc(100vh - 70px);
+        left: 0;
+        height: 0;
+        width: 100%;
+        /* background-color: #1A4e11; */
+        background-color: rgb(235, 179, 200);
+    }
+    .bottom_menu{
+        display: flex;
+        flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    position: sticky;
+    top: 0;    
+    left: 0;
+    height: 70px;
+    width: 100%;  
+    /* background-color: #1A4e11; */
+    background-color: yellowgreen;
+    }
+    .box{
+        height: 50px;
+        width: 70px;
+        /* background-color: pink; */
+        border: 1px dotted blue;
+    }
+    .box:hover{
+        background-color: #e5f052;
+    }
+    .box:active{
+        background-color: aquamarine;
+    }
+    .icon_text{
+        color:black;
+        font-size: 14px;
+    }    
+    .text_menu{
+        display: none;
+    }
+    #button_1, #copy_right{
+        display: none;
+    }
+
+    .content{
+        width: 100%;
+        margin-bottom: 40px;        
+    }
+    #news_header{
+        font-size:32px;
+    }
+    .news>div{
+        font-size: 20px;;
+    }
+    .container_1{
+        flex-direction: column;
+        margin-top: 0;
+        gap:10px;
+    }
+    .container_2{
+        flex-direction: column-reverse;
+            }
 }
