--- a/main.css
+++ b/main.css
@@ -15,6 +15,9 @@
     width: 20%;
     background-color: #1A4e11;
 }
+.bottom_menu{
+    display: none;    
+}
 .text_menu{
     /* border: 1px dotted red; */
     margin: 20%;
@@ -75,10 +78,10 @@ a:active{
 }
 
 /*Content*/
-.content{
-    height: 3000px;
+.content{  
     width: 80%;
     background-color: #A2F66F;
+    padding-bottom: 3%;
     /* border: 2px dotted red;     */
 }
 .allnews{
@@ -122,7 +125,7 @@ ul{
     display: flex;
     flex-direction: column;
     margin: 1% 3% 3% 3%;
-    padding: 20px;
+    padding: 10px;
     /* border:1px dotted red; */
     color:#1A4e11;
     text-shadow: 2px 2px 4px #2e8a1e;
@@ -144,5 +147,94 @@ ul{
 }
 .first-text{
     margin-bottom: 2%;
+}
+@media screen and (max-width: 725px){
+    .page_news{
+        display:flex;
+        flex-direction: column;
+    }
+    .menu{
+        position: sticky;
+        top: calc(100vh - 70px);
+        left: 0;
+        height: 0;
+        width: 100%;
+        /* background-color: #1A4e11; */
+        background-color: rgb(235, 179, 200);
+    }
+    .bottom_menu{
+        display: flex;
+        flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    position: sticky;
+    top: 0;    
+    left: 0;
+    height: 70px;
+    width: 100%;  
+    /* background-color: #1A4e11; */
+    background-color: yellowgreen;
+    }
+    .box{
+        height: 50px;
+        width: 70px;
+        /* background-color: pink; */
+        border: 1px dotted blue;
+    }
+    .box:hover{
+        background-color: #e5f052;
+    }
+    .box:active{
+        background-color: aquamarine;
+    }
+    .icon_text{
+        color:black;
+        font-size: 14px;
+    }    
+    .text_menu{
+        display: none;
+    }
+    #button_1, #copy_right{
+        display: none;
+    }
+
+    .content{
+        width: 100%;
+        margin-bottom: 40px;
+        padding-bottom: 50px;        
+    }
+    #news_header{
+        font-size:32px;
+    }
+    .news>div{
+        font-size: 20px;;
+    }
+    .container_1{
+        display: flex;
+        flex-direction: column;
+        margin: 1% 3% 3% 3%;
+        padding: 20px;
+        /* border:1px dotted red; */
+        color:#1A4e11;
+        text-shadow: 2px 2px 4px #2e8a1e;
+    }
+    .text_1, .text_3{
+        font-size: 30px;
+            }
+    .text_2{
+        /* border: 1px dotted blue; */
+        margin:5px;
+        font-size: 25px;
+        font-style: italic;  
+    }
+    .text_3{
+        margin-top: 20px;
+    }
+    .first-text{
+        margin-bottom: 2%;
+    }
+    .container_2{
+        flex-direction: column-reverse;
+            }
 }
 
