--- a/main.css
+++ b/main.css
@@ -113,7 +113,7 @@ a:active{
     /* height: 30%; */
     /* border: 1px dotted red; */
     margin-top: 3%;
-    gap:40px;
+    gap:40px;    
 }
 #header_2{
     width: 100%;
@@ -177,9 +177,9 @@ ul{
     }
     .box{
         height: 50px;
-        width: 70px;
+        width: 70px;        
         /* background-color: pink; */
-        border: 1px dotted blue;
+        /* border: 1px dotted blue; */
     }
     .box:hover{
         background-color: #e5f052;
@@ -187,9 +187,13 @@ ul{
     .box:active{
         background-color: aquamarine;
     }
+    a>div{
+        text-decoration: none;
+    }
     .icon_text{
         color:black;
         font-size: 14px;
+        
     }    
     .text_menu{
         display: none;
@@ -203,9 +207,9 @@ ul{
         margin-bottom: 40px;
         padding-bottom: 50px;        
     }
-    #news_header{
+    /* #news_header{
         font-size:32px;
-    }
+    } */
     .news>div{
         font-size: 20px;;
     }
@@ -216,7 +220,7 @@ ul{
         padding: 20px;
         /* border:1px dotted red; */
         color:#1A4e11;
-        text-shadow: 2px 2px 4px #2e8a1e;
+        text-shadow: 2px 2px 4px #2e8a1e;        
     }
     .text_1, .text_3{
         font-size: 30px;
@@ -233,8 +237,13 @@ ul{
     .first-text{
         margin-bottom: 2%;
     }
-    .container_2{
-        flex-direction: column-reverse;
-            }
+    .container{
+        font-size: 20px;
+    }
+    #news_header{
+        font-size: 25px;
+        text-shadow: 1px 1px 2px gray;
+        font-weight: 600;
+    }
 }
 
