--- a/news_text.css
+++ b/news_text.css
@@ -80,7 +80,7 @@ a:active{
 .content{
     width: 80%;
     background-color: #A2F66F;
-    margin-bottom: 50px;
+    padding-bottom: 70px;
 }
 .allnews{
     margin: 3% 5% auto 5%;
@@ -118,7 +118,7 @@ a:active{
 .news{
     /* border: 1px solid green; */
     width: 100%;
-    font-size: 21px;
+    font-size: 22px;
 }
 .text{
     text-indent: 25px;
@@ -148,7 +148,8 @@ a:active{
         flex-direction: column;
     }
     .menu{
-        position: sticky;
+        position: fixed;
+        /* bottom: 0; */
         top: calc(100vh - 70px);
         left: 0;
         height: 0;
@@ -173,13 +174,17 @@ a:active{
         height: 50px;
         width: 70px;
         /* background-color: pink; */
-        border: 1px dotted blue;
+        /* border: 1px dotted blue; */
+        
     }
     .box:hover{
         background-color: #e5f052;
     }
     .box:active{
         background-color: aquamarine;
+    }
+    .box>a{
+        text-decoration: none;
     }
     .icon_text{
         color:black;
@@ -194,13 +199,21 @@ a:active{
 
     .content{
         width: 100%;
-        margin-bottom: 40px;        
+        margin-bottom: 40px;
+        background-color: #a9d190;        
     }
     #news_header{
         font-size:32px;
     }
     .news>div{
-        font-size: 20px;;
+        font-size: 18px;;
+    }
+    .header{
+        font-size: 20px;
+        /* margin-bottom: 1%; */
+    }
+    .img{
+        width: 80vw;
     }
     .container_1{
         flex-direction: column;
