--- a/action_text.css
+++ b/action_text.css
@@ -164,7 +164,7 @@ p{
         flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    position: sticky;
+    /* position: sticky; */
     top: 0;    
     left: 0;
     height: 70px;
