--- a/main.css
+++ b/main.css
@@ -187,7 +187,7 @@ ul{
     .box:active{
         background-color: aquamarine;
     }
-    a>div{
+    .box>a{
         text-decoration: none;
     }
     .icon_text{
@@ -205,7 +205,8 @@ ul{
     .content{
         width: 100%;
         margin-bottom: 40px;
-        padding-bottom: 50px;        
+        padding-bottom: 50px; 
+        background-color: #b8eb98;        
     }
     /* #news_header{
         font-size:32px;
