--- a/news_text.css
+++ b/news_text.css
@@ -142,6 +142,23 @@ a:active{
     max-width: 100%;
     height: auto;
 }
+.modalWin{
+ opacity: 0.1;
+ pointer-events: none; 
+ position: fixed;
+ top:100px;
+ left:200px;
+ height: 200px;
+ width: 300px;  
+ z-index:-7; 
+ color: lightcyan;  
+}
+.modalWin:target{
+    opacity: 1;
+    z-index: 7;
+    pointer-events: auto;
+    color: lightsalmon;
+}
 @media screen and (max-width: 725px){
     .page_news{
         display:flex;
@@ -223,4 +240,5 @@ a:active{
     .container_2{
         flex-direction: column-reverse;
             }
+    
 }
