--- a/action_text.css
+++ b/action_text.css
@@ -41,12 +41,14 @@ a:active{
 #button_1{
     width: 70%;
     height: 10%;
-    border: 3px solid #A2F66F;
+    /* border: 3px solid #A2F66F; */
+    border: 3px solid orange;
     border-radius: 20px;
     padding: auto;
     margin-left: auto;
     margin-right: auto;
-    background-color: #A2F66F;
+    background-color: #e5f052;
+    /* background-color: #A2F66F; */
     /* color: #1A4e11; */
     color: black;
     font-size: 20px;
@@ -57,7 +59,8 @@ a:active{
    
 }
 #button_1:hover{
-    background-color: #e5f052;
+    background-color: white;
+    /* background-color: #e5f052; */
     /* text-shadow: 10px 10px 5px red; */
     
 }
@@ -153,7 +156,7 @@ p{
     opacity: 0;
     pointer-events: none;
     width: 360px;
-    height: 230px;
+    height: 300px;
     border: 2x solid blue;
     position: fixed;
     top: calc(50vh - 115px);
