--- a/my_css1.css
+++ b/my_css1.css
@@ -22,7 +22,7 @@ body{
     display: flex;
     flex-direction: column;
   
-    border: 1px dotted blue;
+    /* border: 1px dotted blue; */
     margin: 5px auto;
     height: 100vh;
     max-width: 1240px;
@@ -37,20 +37,20 @@ a{
 
 .rodina{
     width: 64vw;
-    font-size: 50px;
+    font-size: 85px;
     font-family: Arial;
     font-style: normal;
     font-weight: 700;
     
     color: #C8E9EE;    
-    text-shadow: blue 2px 2px 4px;
-    text-align: right;
+    text-shadow: blue 4px 4px 8px;
+    text-align: center;
     /* background-color: #A2F66F; */
     opacity: 0.6;
 }
 h2{
     color: rgb(227, 238, 75);    
-    font-size: 85px;
+    font-size: 105px;
     line-height: 1.4em;
     /* font-family: 'Miami'; */
     font-style: italic;
@@ -67,10 +67,11 @@ h2{
     flex-direction: row;
     justify-content: center;
     /* align-items: end; */
-width: 7vw;
-/* background-color: #A2F66F; */
-opacity: 0.9;
-height: 5vh;
+    width: 7vw;
+    /* background-color: #A2F66F; */
+    opacity: 0.9;
+    height: 5vh;
+    
 }
 h3{
 color: rgb(227, 238, 75);
@@ -86,6 +87,46 @@ transform: scale(1, 0.3);
     animation-iteration-count: infinite;
 
 }
+.z_container{
+    display: flex;
+    flex-direction: row;
+    width: 300px;
+        height: 100px;
+        background-color:rgb(240, 240, 152);
+        border:8px solid rgb(204, 24, 24);
+    border-radius: 30px;
+    position:absolute;
+    right: 70px;
+    bottom: 70px;   
+    box-shadow: 7px 7px 10px black; 
+    animation-name: enter_from_right;
+    animation-duration: 2s;
+}
+
+.z-image{
+    width: 70px;
+    heighT: 70px;
+    
+}
+.action-text{
+    width: 200px;
+    heighT: 100px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.title-01{
+    font-size: 30px;
+    font-weight: 900;
+    color: red;
+    /* background-color: aquamarine; */
+}
+.text-01{
+    font-size: 17px;
+    color: rgb(15, 85, 21);
+    font-weight: 900;
+    /* background-color: aquamarine; */
+}
 @keyframes my_animation {
     from{
         margin-top: -80px;
@@ -100,6 +141,34 @@ transform: scale(1, 0.3);
         margin-top: -80px;
     }    
 }
+@keyframes enter_from_right {
+    from{
+        right: 0;
+        opacity: 0;
+        width: 300px;
+        height: 100px;
+        background-color:rgb(240, 240, 152);
+        border:4px solid rgb(204, 24, 24);
+    }
+    85%{
+        right: 70px;
+        opacity: 1.0;
+        width: 310px;
+        height: 110px;
+        background-color:rgb(240, 240, 152);
+        border:6px solid rgb(204, 24, 24);
+    }
+    100%{
+        right: 70px;
+        opacity: 1;
+        width: 300px;
+        height: 100px;
+        background-color:rgb(240, 240, 152);
+        border:8px solid rgb(204, 24, 24);
+    }
+}
+
+
 @media only screen and (max-width: 1024px){
     h2{
         font-size: 75px;
