--- a/main.css
+++ b/main.css
@@ -20,14 +20,21 @@
 }
 .text_menu{
     /* border: 1px dotted red; */
-    margin: 20%;
-    margin-bottom: 10%;
+    margin: 10% 15% 10% 15%;    
+    height: 65vh;
+}
+.references{
+    /* border: 1px dotted black; */
+    height: 65vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
 }
 .references > a{
     margin-left: 10%;
     text-decoration: none;
     color:#A2F66F;
-    font-size: 24px;
+    font-size: 25px;
     font-style: italic;
     font-family: Inter;    
 }
@@ -38,27 +45,26 @@ a:active{
     color: white;
 }
 #button_1{
-    width: 70%;
-    height: 10%;
-    border: 5px solid orange;
+    width: 73%;
+    height: 12%;
+    font-size: 21px;
+    text-align: center;
+    border: 3px solid orange;
     border-radius: 20px;
     padding: auto;
     margin-left: auto;
     margin-right: auto;
-    /* background-color: #A2F66F; */
     background-color: #e5f052;
     /* color: #1A4e11; */
-    color: black;
-    font-size: 20px;
+    color: black;    
     font-style: italic;
     text-shadow: 3px 3px 3px black;
-    box-shadow: 10px 10px 5px black;
-    text-align: center;
+    box-shadow: 10px 10px 5px black;  
    
 }
 #button_1:hover{
     background-color: white;
-    
+    cursor: pointer;
     /* text-shadow: 10px 10px 5px red; */
     
 }
@@ -69,7 +75,7 @@ a:active{
     box-shadow: 10px 10px 5px #1A4e11;
 }
 #button_text{
-    margin-top: 5px;
+    margin-top: 10px;
 }
 #copy_right{    
     opacity: 25%;
@@ -149,6 +155,12 @@ ul{
 }
 .first-text{
     margin-bottom: 2%;
+}
+.adress_container{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
 @media screen and (max-width: 725px){
     .page_news{
