--- a/news_text.css
+++ b/news_text.css
@@ -18,8 +18,15 @@
 }
 .text_menu{
     /* border: 1px dotted red; */
-    margin: 20%;
-    margin-bottom: 10%;
+    margin: 10% 15% 10% 15%;    
+    height: 65vh;
+}
+.references{
+    /* border: 1px dotted black; */
+    height: 65vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
 }
 
 .references > a{
@@ -38,30 +45,28 @@ a:active{
     color: white;
 }
 #button_1{
-    width: 70%;
-    height: 10%;
-    /* border: 3px solid #A2F66F; */
+    width: 73%;
+    height: 12%;
+    font-size: 21px;
+    text-align: center;
     border: 3px solid orange;
     border-radius: 20px;
     padding: auto;
     margin-left: auto;
     margin-right: auto;
     background-color: #e5f052;
-    /* background-color: #A2F66F; */
     /* color: #1A4e11; */
-    color: black;
-    font-size: 20px;
+    color: black;    
     font-style: italic;
     text-shadow: 3px 3px 3px black;
-    box-shadow: 10px 10px 5px black;
-    text-align: center;
+    box-shadow: 10px 10px 5px black;  
    
 }
 #button_1:hover{
     background-color: white;
     /* background-color: #e5f052; */
     /* text-shadow: 10px 10px 5px red; */
-    
+    cursor: pointer;
 }
 #button_1:active{
     background-color: white;
@@ -70,7 +75,7 @@ a:active{
     box-shadow: 10px 10px 5px #1A4e11;
 }
 #button_text{
-    margin-top: 5px;
+    margin-top: 10px;
 }
 #copy_right{    
     opacity: 25%;
